--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           rm -f .env
           echo .env.sample > .env
+          export $(grep -v '^#' .env | xargs)
 
       - name: "⚡ Cache Docker ${{ env.working-directory }} layers"
         id: docker-cache
@@ -53,7 +54,23 @@ jobs:
       - name: "🏗 Build Docker image"
         working-directory: ${{ env.working-directory }}
         if: steps.docker-cache.outputs.cache-hit != 'true'
-        run: docker build . -t ${{ env.working-directory }} --cache-from=localhost:5000/${{ env.working-directory }} --build-arg BUILDKIT_INLINE_CACHE=1
+        run: |
+          docker build . \
+          -t ${{ env.working-directory }} \
+          --cache-from=localhost:5000/${{ env.working-directory }} \
+          --build-arg BUILDKIT_INLINE_CACHE=1 \
+          --build-arg NODE_ENV=$NODE_ENV \
+          --build-arg SERVER_URL=$SERVER_URL \
+          --build-arg PORT=$PORT \
+          --build-arg MONGODB_URL=$MONGODB_URL \
+          --build-arg SKIP_PREFLIGHT_CHECK=$SKIP_PREFLIGHT_CHECK \
+          --build-arg REACT_APP_FIREBASE_API_KEY=$REACT_APP_FIREBASE_API_KEY \
+          --build-arg REACT_APP_FIREBASE_AUTH_DOMAIN=$REACT_APP_FIREBASE_AUTH_DOMAIN \
+          --build-arg REACT_APP_FIREBASE_PROJECT_ID=$REACT_APP_FIREBASE_PROJECT_ID \
+          --build-arg REACT_APP_FIREBASE_STORAGE_BUCKET=$REACT_APP_FIREBASE_STORAGE_BUCKET \
+          --build-arg REACT_APP_FIREBASE_MESSAGING_SENDER_ID=$REACT_APP_FIREBASE_MESSAGING_SENDER_ID \
+          --build-arg REACT_APP_FIREBASE_APP_ID=$REACT_APP_FIREBASE_APP_ID \
+          --build-arg REACT_APP_FIREBASE_MEASUREMENT_ID=$REACT_APP_FIREBASE_MEASUREMENT_ID \
 
       - name: "🏷️ Tag local Docker image build"
         if: steps.docker-cache.outputs.cache-hit != 'true'
@@ -92,6 +109,7 @@ jobs:
         run: |
           rm -f .env
           echo .env.sample > .env
+          export $(grep -v '^#' .env | xargs)
 
       - name: "⚡ Cache Docker ${{ env.working-directory }} layers"
         id: docker-cache-a
@@ -144,6 +162,7 @@ jobs:
         run: |
           rm -f .env
           echo .env.sample > .env
+          export $(grep -v '^#' .env | xargs)
 
       # - name: "⚡ Cache/Build Docker Client layers"
       #   id: docker-cache-client
