test updated .env creation in production

--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -36,7 +36,8 @@ jobs:
       - name: "🔧 Create .env file"
         run: |
           rm -f .env
-          echo .env.sample > .env && export $(grep -v '^#' .env | xargs)
+          echo .env.sample > .env
+          export $(grep -v '^#' .env | xargs)
 
       - name: "⚡ Cache Docker ${{ env.working-directory }} layers"
         id: docker-cache
@@ -107,7 +108,8 @@ jobs:
       - name: "🔧 Create .env file"
         run: |
           rm -f .env
-          echo .env.sample > .env && export $(grep -v '^#' .env | xargs)
+          echo .env.sample > .env
+          export $(grep -v '^#' .env | xargs)
 
       - name: "⚡ Cache Docker ${{ env.working-directory }} layers"
         id: docker-cache-a
@@ -159,7 +161,8 @@ jobs:
       - name: "🔧 Create .env file"
         run: |
           rm -f .env
-          echo .env.sample > .env && export $(grep -v '^#' .env | xargs)
+          echo .env.sample > .env
+          export $(grep -v '^#' .env | xargs)
 
       # - name: "⚡ Cache/Build Docker Client layers"
       #   id: docker-cache-client
