fix curl command typo

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -256,7 +256,7 @@ jobs:
             UPASS="${{ secrets.DOCKERHUB_PASSWORD }}"
 
             function docker_tag_exists() {
-                TOKEN="${{ secrets.(curl -s -H "Content-Type: application/json" -X POST -d '{"username": "'${UNAME}'", "password": "'${UPASS}'"}' https://hub.docker.com/v2/users/login/ | jq -r .token)
+                TOKEN=$(curl -s -H "Content-Type: application/json" -X POST -d '{"username": "'${UNAME}'", "password": "'${UPASS}'"}' https://hub.docker.com/v2/users/login/ | jq -r .token)
                 curl --silent -f --head -lL https://hub.docker.com/v2/repositories/$1/tags/$2/ > /dev/null
             }
 
