--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -63,14 +63,14 @@ jobs:
           path: ${{ env.working-directory }}/coverage/lcov.info
           retention-days: 3
 
-      - name: "🌪️ Comment code coverage to PR"
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # this is just an example, this could be any command that will trigger jest
-          working-directory: ${{ env.working-directory }}
-          test-command: "npm run test"
+      # - name: "🌪️ Comment code coverage to PR"
+      #   uses: mattallty/jest-github-action@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     # this is just an example, this could be any command that will trigger jest
+      #     working-directory: ${{ env.working-directory }}
+      #     test-command: "npm run test"
 
   client_build:
     runs-on: ${{ matrix.os }}
@@ -164,14 +164,14 @@ jobs:
           path: ${{ env.working-directory }}/coverage/lcov.info
           retention-days: 3
 
-      - name: "🌪️ Comment code coverage to PR"
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          # this is just an example, this could be any command that will trigger jest
-          working-directory: ${{ env.working-directory }}
-          test-command: "npm run test"
+      # - name: "🌪️ Comment code coverage to PR"
+      #   uses: mattallty/jest-github-action@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     # this is just an example, this could be any command that will trigger jest
+      #     working-directory: ${{ env.working-directory }}
+      #     test-command: "npm run test"
 
 
   coverage_upload:
