--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -297,6 +297,24 @@ jobs:
             NC='\033[0m' # No Color
             echo -e "$BLUE Starting EC2 deployment script $NC"
             sudo service docker stop
+
+            rm -f .env
+            touch .env
+            cat >/.env <<EOL
+            NODE_ENV="${{ secrets.NODE_ENV }}"
+            SERVER_URL="${{ secrets.SERVER_URL }}"
+            PORT="${{ secrets.PORT }}"
+            MONGODB_URL="${{ secrets.MONGODB_URL }}"
+            SKIP_PREFLIGHT_CHECK="${{ secrets.SKIP_PREFLIGHT_CHECK }}"
+            REACT_APP_FIREBASE_API_KEY="${{ secrets.REACT_APP_FIREBASE_API_KEY }}"
+            REACT_APP_FIREBASE_AUTH_DOMAIN="${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}"
+            REACT_APP_FIREBASE_PROJECT_ID="${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}"
+            REACT_APP_FIREBASE_STORAGE_BUCKET="${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}"
+            REACT_APP_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}"
+            REACT_APP_FIREBASE_APP_ID="${{ secrets.REACT_APP_FIREBASE_APP_ID }}"
+            REACT_APP_FIREBASE_MEASUREMENT_ID="${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}"
+            EOL
+
             # rm -f .env
             # echo "${{ secrets.ENV_PRODUCTION }}" > .env
 
