--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -3,24 +3,24 @@ name: CI/CD
 on:
   push:
     branches:
-      - '*'
+      - 'main'
 
 jobs:
 
-  # node_ci:
-  #   name: Node CI
-  #   uses: ./.github/workflows/node_ci.yml
-  #   with:
-  #     ENVIRONMENT: CI
-  #   secrets:
-  #     CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+  node_ci:
+    name: Node CI
+    uses: ./.github/workflows/node_ci.yml
+    with:
+      ENVIRONMENT: CI
+    secrets:
+      CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
 
-  # docker_ci:
-  #   name: Docker CI
-  #   uses: ./.github/workflows/docker_ci.yml
+  docker_ci:
+    name: Docker CI
+    uses: ./.github/workflows/docker_ci.yml
 
   build_docker_client:
-    # needs: [node_ci, docker_ci]
+    needs: [node_ci, docker_ci]
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -125,7 +125,7 @@ jobs:
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   build_docker_server:
-    # needs: [node_ci, docker_ci]
+    needs: [node_ci, docker_ci]
     name: "🐳 Build/Publish Docker (SERVER) Image"
     environment: production
     runs-on: ubuntu-latest
