--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -168,7 +168,19 @@ jobs:
   #       run: |
   #         rm -f .env
   #         touch .env
-  #         sudo cat >.env <<EOL
+  #         printf "NODE_ENV=\"${{ secrets.NODE_ENV }}\"
+  #         SERVER_URL=\"${{ secrets.SERVER_URL }}\"
+  #         PORT=\"${{ secrets.PORT }}\"
+  #         MONGODB_URL=\"${{ secrets.MONGODB_URL }}\"
+  #         SKIP_PREFLIGHT_CHECK=\"${{ secrets.SKIP_PREFLIGHT_CHECK }}\"
+  #         REACT_APP_FIREBASE_API_KEY=\"${{ secrets.REACT_APP_FIREBASE_API_KEY }}\"
+  #         REACT_APP_FIREBASE_AUTH_DOMAIN=\"${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}\"
+  #         REACT_APP_FIREBASE_PROJECT_ID=\"${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}\"
+  #         REACT_APP_FIREBASE_STORAGE_BUCKET=\"${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}\"
+  #         REACT_APP_FIREBASE_MESSAGING_SENDER_ID=\"${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}\"
+  #         REACT_APP_FIREBASE_APP_ID=\"${{ secrets.REACT_APP_FIREBASE_APP_ID }}\"
+  #         REACT_APP_FIREBASE_MEASUREMENT_ID=\"${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}\"" >> .env
+
   #         NODE_ENV="${{ secrets.NODE_ENV }}"
   #         SERVER_URL="${{ secrets.SERVER_URL }}"
   #         PORT="${{ secrets.PORT }}"
@@ -181,7 +193,7 @@ jobs:
   #         REACT_APP_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}"
   #         REACT_APP_FIREBASE_APP_ID="${{ secrets.REACT_APP_FIREBASE_APP_ID }}"
   #         REACT_APP_FIREBASE_MEASUREMENT_ID="${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}"
-  #         EOL
+
 
   #         NODE_ENV="${{ secrets.NODE_ENV }}"
   #         SERVER_URL="${{ secrets.SERVER_URL }}"
@@ -310,9 +322,6 @@ jobs:
             REACT_APP_FIREBASE_MESSAGING_SENDER_ID=\"${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}\"
             REACT_APP_FIREBASE_APP_ID=\"${{ secrets.REACT_APP_FIREBASE_APP_ID }}\"
             REACT_APP_FIREBASE_MEASUREMENT_ID=\"${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}\"" >> .env
-
-            # rm -f .env
-            # echo "${{ secrets.ENV_PRODUCTION }}" > .env
 
             NODE_ENV="${{ secrets.NODE_ENV }}"
             SERVER_URL="${{ secrets.SERVER_URL }}"
