--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -94,15 +94,15 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache dependencies"
-        uses: actions/cache@v3
-        id: modules-cache
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+      # - name: "⚡ Cache dependencies"
+      #   uses: actions/cache@v3
+      #   id: modules-cache
+      #   with:
+      #     path: '**/node_modules'
+      #     key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔧 Create .env file"
@@ -147,15 +147,15 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - name: "⚡ Cache dependencies"
-        uses: actions/cache@v3
-        id: modules-cache
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+      # - name: "⚡ Cache dependencies"
+      #   uses: actions/cache@v3
+      #   id: modules-cache
+      #   with:
+      #     path: '**/node_modules'
+      #     key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔧 Create .env file"
