remove broken npm cache for node CI

--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -49,7 +49,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
@@ -150,7 +150,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "✅  Run tests"
