[CLIENT] create Profile page (#62)
* create profile page form with tabs

* fix profile dropdown entry form

* refactor and fix profile settings page

* working ZipCode preferences with ZipCode pool

* create profile images tab

* write tests for Profile page components

* write tests for Account profile form component

* test sign up account form

* improve test coverage for client

* test zipcode API helpers

* test sample chat component

* create test for ImagesTab component

* fix server zipcode endpoint

* remove cache for docker-ci build

* remove cache for docker-ci build

* replace random string library

* remove broken npm cache for node CI

* remove broken unique string module

--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -30,7 +30,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔧 Create .env file"
@@ -102,7 +102,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔧 Create .env file"
@@ -155,7 +155,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔧 Create .env file"
